--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
   "require": {
     "vlucas/phpdotenv": "^5.6",
     "ext-pdo": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "PhpBarcode\\": "vendor/php_barcode/"
+    }
   }
+
 }
