--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
   "require": {
     "vlucas/phpdotenv": "^5.6",
     "ext-pdo": "*",
-    "fpdf/fpdf": "^1.86"
+    "fpdf/fpdf": "^1.86",
+    "phpmailer/phpmailer": "^6.10"
   }
 }
